# efiutils

./: .gitignore  Cargo.toml  floppy.sh  hiidb.py  init.sh  mount.sh  parse.py  run.sh
.cargo/: config
.github/workflows/: rust.yml
src/: lib.rs  main.rs
