[package]
name = "efiutils"
version = "0.1.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
uefi = "0.11.0"
uefi-services = "0.8.0"
ucs2 = "0.3.2"
bitflags = "1.2.1"
anyhow = { version = "1.0.41", default-features = false }

[patch.crates-io]
uefi-services = { path = "../uefi-rs/uefi-services" }
uefi-macros = { path = "../uefi-rs/uefi-macros" }
uefi = { path = "../uefi-rs" }
