[package]
name = "efiutils"
version = "0.1.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
log = "0.4.21"
ucs2 = "0.3.2"
uefi = { version = "0.27.0", features = ["alloc", "global_allocator"] }
uefi-services = "0.24.0"
uguid = "2.2.0"
